Add directional light effector, and line particle ui

--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -80,4 +80,12 @@
     <ItemGroup>
       <NativeLibs Remove="DataManager.cs" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Publish\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <NativeLibs Remove="VFXEditor.json" />
+    </ItemGroup>
 </Project>
