--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -65,6 +65,7 @@
         <PackageReference Include="DotNetZip" Version="1.13.8" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Reloaded.Hooks" Version="2.4.1" />
+        <PackageReference Include="SharpZipLib" Version="1.3.1" />
     </ItemGroup>
 
     <ItemGroup>
