add default file

--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -74,6 +74,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Update="Templates\default_vfx.avfx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="VFXEditor.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
