--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -52,6 +52,30 @@
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\Lumina.Excel.dll</HintPath>
             <Private>False</Private>
         </Reference>
+        <Reference Include="SharpDX">
+            <HintPath>$(DALAMUD_ROOT)\SharpDX.dll</HintPath>
+            <HintPath>..\libs\SharpDX.dll</HintPath>
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\SharpDX.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
+        <Reference Include="SharpDX.DXGI">
+            <HintPath>$(DALAMUD_ROOT)\SharpDX.DXGI.dll</HintPath>
+            <HintPath>..\libs\SharpDX.DXGI.dll</HintPath>
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\SharpDX.DXGI.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
+        <Reference Include="SharpDX.Mathematics">
+            <HintPath>$(DALAMUD_ROOT)\SharpDX.Mathematics.dll</HintPath>
+            <HintPath>..\libs\SharpDX.Mathematics.dll</HintPath>
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\SharpDX.Mathematics.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
+        <Reference Include="SharpDX.Direct3D11">
+            <HintPath>$(DALAMUD_ROOT)\SharpDX.Direct3D11.dll</HintPath>
+            <HintPath>..\libs\SharpDX.Direct3D11.dll</HintPath>
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\SharpDX.Direct3D11.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
     </ItemGroup>
     
     <ItemGroup>
@@ -66,6 +90,7 @@
         <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Reloaded.Hooks" Version="2.4.1" />
+        <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
         <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
         <PackageReference Include="SharpZipLib" Version="1.3.1" />
     </ItemGroup>
@@ -83,6 +108,9 @@
       </None>
       <None Update="npc.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="Shaders\ModelPreview.fx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="VFXEditor.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
