--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -86,13 +86,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DotNetZip" Version="1.13.8" />
         <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Reloaded.Hooks" Version="2.4.1" />
         <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
         <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
         <PackageReference Include="SharpZipLib" Version="1.3.1" />
+        <PackageReference Include="TeximpNet" Version="1.4.3" />
     </ItemGroup>
 
     <ItemGroup>
