--- a/AVFXLib/AVFXLib.csproj
+++ b/AVFXLib/AVFXLib.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
       <TargetFramework>net472</TargetFramework>
-      <LangVersion>latest</LangVersion>
+      <LangVersion>preview</LangVersion>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
