--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <AssemblyTitle>VFXEditor</AssemblyTitle>
         <Company></Company>
         <Product>VFXEditor</Product>
         <Copyright>Copyright © 2020</Copyright>
-        <FileVersion>1.3.0.2</FileVersion>
-        <AssemblyVersion>1.3.0.2</AssemblyVersion>
+        <FileVersion>1.3.1.0</FileVersion>
+        <AssemblyVersion>1.3.1.0</AssemblyVersion>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
@@ -86,11 +86,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="ILRepack" Version="2.1.0-beta1" />
+        <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.18.2" />
         <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="Reloaded.Hooks" Version="2.4.1" />
         <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
-        <PackageReference Include="SharpDX.Direct2D1" Version="4.2.0" />
         <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
         <PackageReference Include="SharpZipLib" Version="1.3.1" />
         <PackageReference Include="TeximpNet" Version="1.4.3" />
@@ -139,11 +140,7 @@
       </None>
     </ItemGroup>
 
-    <ItemGroup>
-      <NativeLibs Remove="DataManager.cs" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <NativeLibs Remove="VFXEditor.json" />
-    </ItemGroup>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+      <Exec Command="mkdir $(TargetDir)Output\Files&#xD;&#xA;mkdir $(TargetDir)Output\Shaders&#xD;&#xA;xcopy /E /Y &quot;$(TargetDir)Files&quot; &quot;$(TargetDir)Output\Files&quot;&#xD;&#xA;xcopy /E /Y &quot;$(TargetDir)Shaders&quot; &quot;$(TargetDir)Output\Shaders&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)FASM*.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)SharpDX.D3DCompiler.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)VFXEditor.json&quot; &quot;$(TargetDir)Output&quot;" />
+    </Target>
 </Project>
