--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -6,8 +6,8 @@
         <Company></Company>
         <Product>VFXEditor</Product>
         <Copyright>Copyright © 2020</Copyright>
-        <FileVersion>1.3.2.9</FileVersion>
-        <AssemblyVersion>1.3.2.9</AssemblyVersion>
+        <FileVersion>1.3.2.10</FileVersion>
+        <AssemblyVersion>1.3.2.10</AssemblyVersion>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
@@ -156,6 +156,6 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="mkdir $(TargetDir)Output\Files&#xD;&#xA;mkdir $(TargetDir)Output\Shaders&#xD;&#xA;mkdir $(TargetDir)Output\runtimes&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x64&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x86&#xD;&#xA;xcopy /E  /Y /R &quot;$(TargetDir)Files&quot; &quot;$(TargetDir)Output\Files&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)Shaders&quot; &quot;$(TargetDir)Output\Shaders&quot;&#xD;&#xA;xcopy /E /Y &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x64&quot;&#xD;&#xA;xcopy /E /Y &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x86&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)FASM*.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)SharpDX.D3DCompiler.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)TeximpNet.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)VFXEditor.json&quot; &quot;$(TargetDir)Output&quot;" />
+      <Exec Command="mkdir $(TargetDir)Output\Files&#xD;&#xA;mkdir $(TargetDir)Output\Shaders&#xD;&#xA;mkdir $(TargetDir)Output\runtimes&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x64&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x86&#xD;&#xA;xcopy /E  /Y /R &quot;$(TargetDir)Files&quot; &quot;$(TargetDir)Output\Files&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)Shaders&quot; &quot;$(TargetDir)Output\Shaders&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x64&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x86&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)FASM*.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)SharpDX.D3DCompiler.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)TeximpNet.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)VFXEditor.json&quot; &quot;$(TargetDir)Output&quot;" />
     </Target>
 </Project>
