create settings and tools dialog, start with workspace save

--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -174,4 +174,8 @@
     <ItemGroup>
       <NativeLibs Remove="Plugin.Data.cs" />
     </ItemGroup>
+
+    <ItemGroup>
+      <NativeLibs Remove="Plugin.Workspace.cs" />
+    </ItemGroup>
 </Project>
