--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -11,33 +11,28 @@
         <AssemblyVersion>1.5.0.0</AssemblyVersion>
         <OutputPath>bin\$(Configuration)\</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Platforms>AnyCPU;x64;x86</Platforms>
+        <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+        <PlatformTarget>AnyCPU</PlatformTarget>
         <DebugType>full</DebugType>
         <DefineConstants>DEBUG;TRACE</DefineConstants>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
-      <DebugType>full</DebugType>
-      <DefineConstants>DEBUG;TRACE</DefineConstants>
-    </PropertyGroup>
-
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+      <PlatformTarget>x64</PlatformTarget>
       <DebugType>full</DebugType>
       <DefineConstants>DEBUG;TRACE</DefineConstants>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+        <PlatformTarget>AnyCPU</PlatformTarget>
         <DebugType>pdbonly</DebugType>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
-      <DebugType>pdbonly</DebugType>
-    </PropertyGroup>
-
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+      <PlatformTarget>x64</PlatformTarget>
       <DebugType>pdbonly</DebugType>
     </PropertyGroup>
 
@@ -97,13 +92,13 @@
             <Private>False</Private>
         </Reference>
         <Reference Include="Newtonsoft.Json">
-            <HintPath>$(DALAMUD_ROOT)\Newtonsoft.Json</HintPath>
+            <HintPath>$(DALAMUD_ROOT)\Newtonsoft.Json.dll</HintPath>
             <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Newtonsoft.Json.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="System.Drawing.Common">
-            <HintPath>$(DALAMUD_ROOT)\System.Drawing.Common</HintPath>
+            <HintPath>$(DALAMUD_ROOT)\System.Drawing.Common.dll</HintPath>
             <HintPath>..\libs\System.Drawing.Common.dll</HintPath>
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\System.Drawing.Common.dll</HintPath>
             <Private>False</Private>
