add better monster vfxs

--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -135,6 +135,9 @@
       <None Update="Files\emitter_default.vfxedit">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Files\monster_vfx.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
       <None Update="Files\npc.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
