--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -103,13 +103,18 @@
             <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\System.Drawing.Common.dll</HintPath>
             <Private>False</Private>
         </Reference>
+        <Reference Include="Reloaded.Hooks.Definitions">
+            <HintPath>$(DALAMUD_ROOT)\Reloaded.Hooks.Definitions.dll</HintPath>
+            <HintPath>..\libs\Reloaded.Hooks.Definitions.dll</HintPath>
+            <HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Reloaded.Hooks.Definitions.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="ILRepack" Version="2.1.0-beta1" />
         <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.18.2" />
         <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
-        <PackageReference Include="Reloaded.Hooks" Version="3.2.3" />
         <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
         <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
         <PackageReference Include="TeximpNet" Version="1.4.3" />
@@ -177,7 +182,7 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="mkdir $(TargetDir)Output\Files&#xD;&#xA;mkdir $(TargetDir)Output\Shaders&#xD;&#xA;mkdir $(TargetDir)Output\runtimes&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x64&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x86&#xD;&#xA;xcopy /E  /Y /R &quot;$(TargetDir)Files&quot; &quot;$(TargetDir)Output\Files&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)Shaders&quot; &quot;$(TargetDir)Output\Shaders&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x64&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x86&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)FASM*.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)SharpDX.D3DCompiler.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)TeximpNet.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)VFXEditor.json&quot; &quot;$(TargetDir)Output&quot;" />
+      <Exec Command="mkdir $(TargetDir)Output\Files&#xD;&#xA;mkdir $(TargetDir)Output\Shaders&#xD;&#xA;mkdir $(TargetDir)Output\runtimes&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x64&#xD;&#xA;mkdir $(TargetDir)Output\runtimes\win-x86&#xD;&#xA;xcopy /E  /Y /R &quot;$(TargetDir)Files&quot; &quot;$(TargetDir)Output\Files&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)Shaders&quot; &quot;$(TargetDir)Output\Shaders&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x64&quot;&#xD;&#xA;xcopy /E /Y /R &quot;$(TargetDir)runtimes\win-x64&quot; &quot;$(TargetDir)Output\runtimes\win-x86&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)SharpDX.D3DCompiler.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)TeximpNet.dll&quot; &quot;$(TargetDir)Output&quot;&#xD;&#xA;xcopy /Y &quot;$(TargetDir)VFXEditor.json&quot; &quot;$(TargetDir)Output&quot;" />
     </Target>
 
     <ItemGroup>
