--- a/VFXEditor/DalamudPackager.targets
+++ b/VFXEditor/DalamudPackager.targets
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
+    <Target Name="PostBuildStuff" AfterTargets="Build">
+        <Exec Command="del $(OutputPath)SharpDX.dll" />
+
+        <Exec Command="del $(OutputPath)*.pdb" />
+        <Exec Command="del $(OutputPath)*.deps.json" />
+    </Target>
+    
     <Target Name="PackagePlugin" AfterTargets="PostBuildStuff" Condition="'$(Configuration)' == 'Release'">
         <DalamudPackager
                 ProjectDir="$(ProjectDir)"
