--- a/VFXEditor/VFXEditor.csproj
+++ b/VFXEditor/VFXEditor.csproj
@@ -97,10 +97,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="DalamudPackager" Version="2.1.7" />
+        <PackageReference Include="DalamudPackager" Version="2.1.8" />
+        <PackageReference Include="HelixToolkit" Version="2.22.0" />
+        <PackageReference Include="HelixToolkit.SharpDX.Core" Version="2.22.0" />
         <PackageReference Include="mgholam.fastCSV" Version="2.0.9" />
         <PackageReference Include="SharpDX.D3DCompiler" Version="4.2.0" />
-        <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0020" />
+        <PackageReference Include="SharpGLTF.Toolkit" Version="1.0.0-alpha0027" />
         <PackageReference Include="TeximpNet" Version="1.4.3" />
     </ItemGroup>
 
